--- a/service.yaml
+++ b/service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: my-service
 spec:
   selector:
-    app: myapps
+    app: myazureaks
   ports:
     - protocol: TCP
       port: 80
