--- a/service.yaml
+++ b/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: dotnetdemo
+  name: myazureaks
   namespace: sarvesh
 spec:
   selector:
-    app: dotnetdemo
+    app: myazureaks
   type: LoadBalancer
   ports:
     - protocol: TCP
